pkg/lang/testdata/ub/body-meta/valid/action-lock.ub
actions: { core.command.run: { @lock: 'x' } }
