pkg/lang/testdata/ub/body-meta/invalid/action-unknown.ub
actions: { core.command.run: { @bogus: 1 } }
